[gd_scene load_steps=2 format=3 uid="uid://dhit0w3r7capu"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_obsqm"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -61.0
offset_top = 200.0
offset_right = -61.0
offset_bottom = 200.0
grow_horizontal = 2
scale = Vector2(2, 2)
script = ExtResource("1_obsqm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="exit_to_main" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/exit_to_main" to="." method="_on_exit_to_main_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
